# PlanetaryModel

./: .clang-format  CMakeLists.txt  Lagrange.out  SpecElem.out  SpecOutput.out  plotout.py
PlanetaryModel/: All
PlanetaryModel/src/: Concepts.h  Concepts2.h  EARTHMODELS.h
examples/: CMakeLists.txt  ConceptsCheck.cpp  EARTHMODELS.h  Integrator.cpp  PREM.h  PREM.h   Spectral_Element.cpp  test_system.hpp  testpoundfoot.cpp
tests/: CMakeLists.txt
