# add_executable(ConceptsCheck ConceptsCheck.cpp)
# target_link_libraries(ConceptsCheck PlanetaryModel)

# add_executable(Integrator Integrator.cpp)
# target_link_libraries(Integrator PlanetaryModel)

# add_executable(testpoundfoot testpoundfoot.cpp)
# target_link_libraries(testpoundfoot PlanetaryModel)

# add_executable(Spectral_Element Spectral_Element.cpp)
# target_link_libraries(Spectral_Element PlanetaryModel)